--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,11 +8,18 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+          
+      - name: Install Rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          components: rustfmt
+          target: x86_64-unknown-linux-gnu
+          toolchain: 1.85
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
         with:
-          version: v1.0.0
+          version: stable
 
       - name: Install just
         uses: extractions/setup-just@v2
