fix(ci): use foundry `1.0.0-stable`

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,8 @@ jobs:
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: v1.0.0
 
       - name: Install just
         uses: extractions/setup-just@v2
