--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,10 +8,10 @@ jobs:
       - name: Set up QEMU for riscv support
         uses: docker/setup-qemu-action@v2
 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: recursive
-          
+
       - name: Install Rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
@@ -34,7 +34,7 @@ jobs:
             libslirp-dev \
             libclang-dev \
             liblua5.4-dev lua5.4 \
-            xxd jq sqlite3
+            xxd jq sqlite3 libc6 clang
 
           export XGENEXT2_VERSION=1.5.6
           export ARCH=amd64
@@ -81,3 +81,15 @@ jobs:
         run: |
           just test-rust-workspace
 
+      - name: Build dave-rollups
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: |
+          cargo build -p dave-rollups --release --locked --target x86_64-unknown-linux-gnu
+
+      - name: Publish artifacts and release
+        uses: houseabsolute/actions-rust-release@v0
+        if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          executable-name: dave-rollups
+          target: x86_64-unknown-linux-gnu
+          changes-file: CHANGELOG.md
