--- a/prt/tests/rollups/justfile
+++ b/prt/tests/rollups/justfile
@@ -5,12 +5,16 @@ HONEYPOT_DIR := "../../../test/programs/honeypot"
 INPUT_BOX := `head -n 1 ../../../test/programs/echo/addresses`
 CONSENSUS := `head -n 2 ../../../test/programs/echo/addresses | tail -n 1`
 
+MAX_EPOCH := "2"
+
 # run PRT rollups test
 test MACH_PATH:
   rm -rf _state
   CONSENSUS={{CONSENSUS}} \
   INPUT_BOX={{INPUT_BOX}} \
-  MACHINE_PATH={{MACH_PATH}} lua prt_rollups.lua
+  MACHINE_PATH={{MACH_PATH}} \
+  MAX_EPOCH={{MAX_EPOCH}} lua prt_rollups.lua && \
+  MAX_EPOCH={{MAX_EPOCH}} lua check_rollups_winner.lua
 
 # run PRT rollups echo test
 test-echo:
