ci: enable rollups test only for tags

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,6 +82,7 @@ jobs:
           just test-rust-workspace
 
       - name: Test dave-rollups
+        if: startsWith(github.ref, 'refs/tags/v')
         working-directory: ./prt/tests/rollups
         run: |
           just test-echo
