--- a/prt/contracts/package.json
+++ b/prt/contracts/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "contracts",
+  "name": "@cartesi/prt-contracts",
   "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.7.0"
+  "license": "Apache-2.0",
+  "packageManager": "pnpm@10.7.0",
+  "dependencies": {
+    "@usecannon/cli": "^2.21.5"
+  }
 }
