--- a/cartesi-rollups/contracts/foundry.toml
+++ b/cartesi-rollups/contracts/foundry.toml
@@ -1,7 +1,7 @@
 [profile.default]
 src = "src"
 out = "out"
-libs = ["lib"]
+libs = ["lib", "dependencies"]
 via_ir = true
 
 remappings = [
@@ -17,3 +17,7 @@ allow_paths = [
 ]
 
 solc-version = "0.8.27"
+
+[dependencies]
+"@openzeppelin-contracts" = "5.2.0"
+forge-std = "1.9.6"
