--- a/cartesi-rollups/contracts/foundry.toml
+++ b/cartesi-rollups/contracts/foundry.toml
@@ -1,7 +1,7 @@
 [profile.default]
 src = "src"
 out = "out"
-libs = ["lib", "dependencies"]
+libs = ["lib", "dependencies", "../../prt/contracts", "../../machine/step"]
 via_ir = true
 
 remappings = [
@@ -9,11 +9,6 @@ remappings = [
     'rollups-contracts/=lib/rollups-contracts/src/',
     'prt-contracts/=../../prt/contracts/src/',
     'step/=../../machine/step/',
-]
-
-allow_paths = [
-    '../../prt/contracts/src/',
-    '../../machine/step/',
 ]
 
 solc-version = "0.8.27"
