--- a/cartesi-rollups/contracts/justfile
+++ b/cartesi-rollups/contracts/justfile
@@ -17,6 +17,9 @@ fmt:
 check-fmt:
     forge fmt --check
 
+install-deps:
+   forge soldeer install
+
 # compile smart contracts
 build-smart-contracts:
     forge build
