refactor(consensus): address review comments

--- a/cartesi-rollups/contracts/foundry.toml
+++ b/cartesi-rollups/contracts/foundry.toml
@@ -7,7 +7,7 @@ via_ir = true
 remappings = [
     '@openzeppelin-contracts-5.2.0/=dependencies/@openzeppelin-contracts-5.2.0/',
     'forge-std-1.9.6/=dependencies/forge-std-1.9.6/',
-    'cartesi-rollups-contracts/=dependencies/cartesi-rollups-contracts-2.0.0-rc.17/src/',
+    'cartesi-rollups-contracts-2.0.0/=dependencies/cartesi-rollups-contracts-2.0.0-rc.17/src/',
 
     'prt-contracts/=../../prt/contracts/src/',
     'step/=../../machine/step/',
