--- a/prt/contracts/justfile
+++ b/prt/contracts/justfile
@@ -2,6 +2,10 @@ BINDINGS_DIR := "./bindings-rs/src/contract"
 SRC_DIR := "."
 BINDINGS_FILTER := "^[^I].+TournamentFactory|LeafTournament|RootTournament|^Tournament$"
 
+export PRIVATE_KEY := "0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80"
+ANVIL_ENDPOINT := "http://127.0.0.1:8545"
+ANVIL_CHAIN_ID := "31337"
+
 default: build
 
 build: build-smart-contracts bind
@@ -33,3 +37,13 @@ bind: clean-bindings
     forge bind --alloy --select "{{BINDINGS_FILTER}}" \
     --module --bindings-path {{BINDINGS_DIR}} \
     --root {{SRC_DIR}}
+
+deploy-dev INITIAL_HASH:
+    forge script \
+        script/TopTournament.s.sol \
+        --fork-url {{ANVIL_ENDPOINT}} \
+        --broadcast \
+        --non-interactive \
+        --sig 'run(bytes32)' \
+        '{{INITIAL_HASH}}' \
+        -vvvv 2>&1
