feat(prt-rs): enhance error handling

--- a/cartesi-rollups/node/prt-runner/Cargo.toml
+++ b/cartesi-rollups/node/prt-runner/Cargo.toml
@@ -15,3 +15,4 @@ rollups-state-manager = { workspace = true }
 
 alloy = { workspace = true }
 log = { workspace = true }
+thiserror = { workspace = true }
