--- a/prt/contracts/foundry.toml
+++ b/prt/contracts/foundry.toml
@@ -1,7 +1,7 @@
 [profile.default]
 src = "src"
 out = "out"
-libs = ["lib"]
+libs = ["dependencies"]
 via_ir = true
 optimizer = true
 
@@ -15,3 +15,6 @@ solc-version = "0.8.27"
 [fmt]
 line_length = 80
 tab_width = 4
+
+[dependencies]
+forge-std = "1.9.6"
