--- a/cartesi-rollups/contracts/foundry.toml
+++ b/cartesi-rollups/contracts/foundry.toml
@@ -1,10 +1,11 @@
 [profile.default]
 src = "src"
 out = "out"
-libs = ["dependencies", "../../prt/contracts", "../../machine/step"]
+libs = ["dependencies"]
 optimizer = true
 via_ir = true
 
+allow_paths = ["../../prt/contracts", "../../machine/step"]
 remappings = [
     'cartesi-rollups-contracts-2.0.0/=dependencies/cartesi-rollups-contracts-2.0.0-rc.17/src/',
 
