refactor(node): rework tokio, refactor `StateManager`

--- a/cartesi-rollups/node/blockchain-reader/Cargo.toml
+++ b/cartesi-rollups/node/blockchain-reader/Cargo.toml
@@ -31,4 +31,6 @@ cartesi-prt-contracts = { workspace = true }
 rusqlite = { workspace = true }
 rusqlite_migration = { workspace = true }
 
+anyhow = { workspace = true }
 clap = { workspace = true }
+tempfile = "3.19"
