--- a/cartesi-rollups/node/epoch-manager/Cargo.toml
+++ b/cartesi-rollups/node/epoch-manager/Cargo.toml
@@ -14,6 +14,7 @@ cartesi-dave-contracts = { workspace = true }
 cartesi-prt-core = { workspace = true }
 rollups-state-manager = { workspace = true }
 
+anyhow = { workspace = true }
 alloy = { workspace = true }
 log = { workspace = true }
 num-traits = { workspace = true }
