--- a/cartesi-rollups/node/blockchain-reader/Cargo.toml
+++ b/cartesi-rollups/node/blockchain-reader/Cargo.toml
@@ -25,12 +25,15 @@ tokio = { workspace = true }
 num-traits = { workspace = true }
 
 [dev-dependencies]
+cartesi-machine = { workspace = true }
+
 alloy = { workspace = true, features = ["node-bindings", "rpc-types"] }
 cartesi-prt-contracts = { workspace = true }
 
 rusqlite = { workspace = true }
 rusqlite_migration = { workspace = true }
 
+tempfile = "3"
+
 anyhow = { workspace = true }
 clap = { workspace = true }
-tempfile = "3.19"
