--- a/cartesi-rollups/node/state-manager/Cargo.toml
+++ b/cartesi-rollups/node/state-manager/Cargo.toml
@@ -13,10 +13,15 @@ repository = { workspace = true }
 [dependencies]
 cartesi-dave-merkle = { workspace = true }
 cartesi-machine = { workspace = true }
+cartesi-prt-core = { workspace = true }
 
 lazy_static = { workspace = true }
 rusqlite = { workspace = true }
 rusqlite_migration = { workspace = true }
+
+hex = { workspace = true }
+tempfile = "3"
+
 
 anyhow = { workspace = true }
 thiserror = { workspace = true }
