--- a/cartesi-rollups/node/machine-runner/Cargo.toml
+++ b/cartesi-rollups/node/machine-runner/Cargo.toml
@@ -17,6 +17,7 @@ cartesi-machine = { workspace = true }
 rollups-state-manager = { workspace = true }
 
 thiserror = { workspace = true }
+log = { workspace = true }
 
 [dev-dependencies]
 cartesi-rollups-contracts = { workspace = true }
