--- a/prt/client-rs/core/Cargo.toml
+++ b/prt/client-rs/core/Cargo.toml
@@ -45,3 +45,6 @@ rusqlite_migration = { workspace = true }
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+[dev-dependencies]
+tempfile = "3"
